Count button on replace tab

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -31,27 +31,27 @@
 #include <windows.h>
 #include "FindReplaceDlg_rc.h"
 
-IDD_FIND_REPLACE_DLG DIALOGEX 119, 13, 360, 132
+IDD_FIND_REPLACE_DLG DIALOGEX 99, 13, 360, 144
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Replace"
 FONT 9, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    RTEXT           "&Find",IDFINDWHAT_STATIC,3,13,13,8
+    RTEXT           "Find:",IDFINDWHAT_STATIC,3,13,15,8
     COMBOBOX        IDFINDWHAT,18,12,284,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,2,27,25,8
+    RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,2,29,25,8
     COMBOBOX        IDREPLACEWITH,29,27,273,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "Filter&s",IDD_FINDINFILES_FILTERS_STATIC,51,43,20,8,SS_NOTIFY
     COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,77,42,225,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "Director&y :",IDD_FINDINFILES_DIR_STATIC,2,52,36,9
+    RTEXT           "Director&y :",IDD_FINDINFILES_DIR_STATIC,3,52,36,9
     COMBOBOX        IDD_FINDINFILES_DIR_COMBO,3,61,343,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,347,61,12,12
     CONTROL         "Follow c&urrent doc.",IDD_FINDINFILES_FOLDERFOLLOWSDOC_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,285,84,68,13
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,275,84,70,12
     CONTROL         "In all sub&-folders",IDD_FINDINFILES_RECURSIVE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,285,95,60,15
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,275,94,60,15
     CONTROL         "In &hidden folders",IDD_FINDINFILES_INHIDDENDIR_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,285,109,64,12
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,275,108,64,12
     CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,3,36,60,14
     CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,3,48,83,15
     PUSHBUTTON      "Mark All",IDCMARKALL,313,12,46,14
@@ -61,29 +61,29 @@ BEGIN
     CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,3,75,70,13
     CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,91,76,48,11
     CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,158,76,53,12
-    GROUPBOX        "Search Mode",IDC_MODE_STATIC,3,89,153,30
-    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,29,98,35,8
-    CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,70,97,85,9
-    CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,6,107,74,10
-    CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,84,107,69,9
-    PUSHBUTTON      "",IDC_FINDPREV,303,12,10,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "",IDC_FINDNEXT,313,12,46,12,BS_MULTILINE | WS_GROUP
+    GROUPBOX        "Search Mode",IDC_MODE_STATIC,4,90,154,30
+    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,31,99,35,8
+    CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,72,98,85,9
+    CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,8,108,74,10
+    CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,86,108,69,9
+    PUSHBUTTON      "",IDC_FINDPREV,293,1,10,10,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "",IDC_FINDNEXT,303,1,46,10,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "Find Next",IDOK,304,11,56,14,WS_GROUP
     CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,351,3,8,8
-    PUSHBUTTON      "Coun&t",IDCCOUNTALL,305,28,54,14
-    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,304,46,55,24,BS_MULTILINE
-    PUSHBUTTON      "Find All in Current &Document",IDC_FINDALL_CURRENTFILE,301,70,58,29,BS_MULTILINE
+    PUSHBUTTON      "Coun&t",IDCCOUNTALL,105,39,54,16
+    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,304,75,55,26,BS_MULTILINE
+    PUSHBUTTON      "&Find All",IDC_FINDALL_CURRENTFILE,306,59,53,15,BS_MULTILINE
     PUSHBUTTON      "Re&place",IDREPLACE,304,28,55,14
-    PUSHBUTTON      "Replace &All",IDREPLACEALL,304,46,55,14
-    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,301,64,58,26,BS_MULTILINE
+    PUSHBUTTON      "Replace &All",IDREPLACEALL,304,45,55,14
+    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,301,60,58,26,BS_MULTILINE
     PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,304,12,55,14,WS_GROUP
     PUSHBUTTON      "&Replace in Files",IDD_FINDINFILES_REPLACEINFILES,304,28,55,14
     PUSHBUTTON      "Close",IDCANCEL,321,101,38,14
-    GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,163,94,101,25
-    CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,165,93,55,8
-    CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,166,106,60,9
-    CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,230,106,33,9
-    CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,224,96,37,7
+    GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,163,95,101,25
+    CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,165,96,57,8
+    CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,166,108,60,9
+    CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,230,108,33,9
+    CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,224,98,37,7
 END
 
 IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
@@ -117,16 +117,16 @@ EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Find in found results"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    RTEXT           "&Find:",IDFINDWHAT_STATIC_FIFOLDER,6,22,75,8
+    RTEXT           "&Find what :",IDFINDWHAT_STATIC_FIFOLDER,6,22,75,8
     COMBOBOX        IDFINDWHAT_FIFOLDER,83,20,178,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
 	CONTROL         "Search only in found lines",IDC_MATCHLINENUM_CHECK_FIFOLDER,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,66,99,16
-	CONTROL         "&Match whole word",IDWHOLEWORD_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,88,140,15
+	CONTROL         "Match &whole word only",IDWHOLEWORD_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,88,140,15
     CONTROL         "Match &case",IDMATCHCASE_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,100,140,15
 
     GROUPBOX        "Search Mode",IDC_MODE_STATIC_FIFOLDER,6,131,159,48
     CONTROL         "&Normal",IDNORMAL_FIFOLDER,"Button",BS_AUTORADIOBUTTON | WS_GROUP,12,143,126,10
     CONTROL         "E&xtended (\\n, \\r, \\t, \\0, \\x...)",IDEXTENDED_FIFOLDER, "Button",BS_AUTORADIOBUTTON,12,155,145,10
-    CONTROL         "Regu&lar expression",IDREGEXP_FIFOLDER,"Button",BS_AUTORADIOBUTTON,12,167,78,10
+    CONTROL         "Re&gular expression",IDREGEXP_FIFOLDER,"Button",BS_AUTORADIOBUTTON,12,167,78,10
 	CONTROL         "&. matches newline",IDREDOTMATCHNL_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,93,167,68,9
     PUSHBUTTON      "Find All",IDOK,268,20,90,14,WS_GROUP
 	PUSHBUTTON      "Close",IDCANCEL,268,38,90,14
