Count button on replace tab

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -37,8 +37,8 @@ EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Replace"
 FONT 9, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    RTEXT           "Find:",IDFINDWHAT_STATIC,3,13,15,8
-    COMBOBOX        IDFINDWHAT,18,12,284,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    RTEXT           "Find",IDFINDWHAT_STATIC,2,13,13,8
+    COMBOBOX        IDFINDWHAT,16,12,286,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,2,29,25,8
     COMBOBOX        IDREPLACEWITH,29,27,273,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "Filter&s",IDD_FINDINFILES_FILTERS_STATIC,51,43,20,8,SS_NOTIFY
@@ -58,21 +58,21 @@ BEGIN
     CONTROL         "In select&ion",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,252,40,48,10
     PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,305,28,54,14
     CONTROL         "&Backward direction",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,3,60,71,15
-    CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,3,75,70,13
-    CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,91,76,48,11
-    CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,158,76,53,12
+    CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,3,75,70,11
+    CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,89,76,48,11
+    CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,156,76,53,12
     GROUPBOX        "Search Mode",IDC_MODE_STATIC,4,90,154,30
-    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,31,99,35,8
-    CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,72,98,85,9
+    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,28,99,35,8
+    CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,69,98,85,9
     CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,8,108,74,10
-    CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,86,108,69,9
-    PUSHBUTTON      "",IDC_FINDPREV,293,1,10,10,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "",IDC_FINDNEXT,303,1,46,10,BS_MULTILINE | WS_GROUP
+    CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,86,109,69,9
+    PUSHBUTTON      "",IDC_FINDPREV,304,13,10,10,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "",IDC_FINDNEXT,319,13,40,10,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "Find Next",IDOK,304,11,56,14,WS_GROUP
     CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,351,3,8,8
     PUSHBUTTON      "Coun&t",IDCCOUNTALL,105,39,54,16
-    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,304,75,55,26,BS_MULTILINE
-    PUSHBUTTON      "&Find All",IDC_FINDALL_CURRENTFILE,306,59,53,15,BS_MULTILINE
+    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,305,75,54,26,BS_MULTILINE
+    PUSHBUTTON      "&Find All",IDC_FINDALL_CURRENTFILE,305,59,54,15,BS_MULTILINE
     PUSHBUTTON      "Re&place",IDREPLACE,304,28,55,14
     PUSHBUTTON      "Replace &All",IDREPLACEALL,304,45,55,14
     PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,301,60,58,26,BS_MULTILINE
