count mod in find dlg

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -31,59 +31,59 @@
 #include <windows.h>
 #include "FindReplaceDlg_rc.h"
 
-IDD_FIND_REPLACE_DLG DIALOGEX 99, 13, 360, 144
+IDD_FIND_REPLACE_DLG DIALOGEX 99, 13, 359, 134
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Replace"
 FONT 9, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    RTEXT           "Find",IDFINDWHAT_STATIC,2,13,13,8
-    COMBOBOX        IDFINDWHAT,16,12,286,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,2,29,25,8
-    COMBOBOX        IDREPLACEWITH,29,27,273,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "Filter&s",IDD_FINDINFILES_FILTERS_STATIC,51,43,20,8,SS_NOTIFY
-    COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,77,42,225,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "Director&y :",IDD_FINDINFILES_DIR_STATIC,3,52,36,9
-    COMBOBOX        IDD_FINDINFILES_DIR_COMBO,3,61,343,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,347,61,12,12
+    RTEXT           "Find",IDFINDWHAT_STATIC,1,14,13,8
+    COMBOBOX        IDFINDWHAT,15,13,286,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,29,25,8
+    COMBOBOX        IDREPLACEWITH,28,27,273,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    RTEXT           "Filter&s",IDD_FINDINFILES_FILTERS_STATIC,55,43,20,8,SS_NOTIFY
+    COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,76,42,225,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    RTEXT           "Director&y :",IDD_FINDINFILES_DIR_STATIC,1,52,36,9
+    COMBOBOX        IDD_FINDINFILES_DIR_COMBO,2,61,343,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,346,61,12,12
     CONTROL         "Follow c&urrent doc.",IDD_FINDINFILES_FOLDERFOLLOWSDOC_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,275,84,70,12
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,276,82,70,12
     CONTROL         "In all sub&-folders",IDD_FINDINFILES_RECURSIVE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,275,94,60,15
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,276,92,60,15
     CONTROL         "In &hidden folders",IDD_FINDINFILES_INHIDDENDIR_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,275,108,64,12
-    CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,3,36,60,14
-    CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,3,48,83,15
-    PUSHBUTTON      "Mark All",IDCMARKALL,311,12,47,14
-    CONTROL         "In select&ion",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,252,40,48,10
-    PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,305,28,54,14
-    CONTROL         "&Backward direction",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,3,60,71,15
-    CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,3,75,70,11
-    CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,89,76,48,11
-    CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,156,76,53,12
-    GROUPBOX        "Search Mode",IDC_MODE_STATIC,4,90,154,30
-    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,28,99,35,8
-    CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,69,98,85,9
-    CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,8,108,74,10
-    CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,86,109,69,9
-    PUSHBUTTON      "",IDC_FINDPREV,303,13,11,11,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "",IDC_FINDNEXT,317,13,41,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "Find Next",IDOK,304,11,56,14,WS_GROUP
-    CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,351,3,8,8
-    PUSHBUTTON      "Coun&t",IDCCOUNTALL,112,41,54,16
-    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,305,75,54,26,BS_MULTILINE
-    PUSHBUTTON      "&Find All",IDC_FINDALL_CURRENTFILE,305,59,54,15,BS_MULTILINE
-    PUSHBUTTON      "Re&place",IDREPLACE,304,28,55,14
-    PUSHBUTTON      "Replace &All",IDREPLACEALL,304,45,55,14
-    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,304,60,55,26,BS_MULTILINE
-    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,304,12,55,14,WS_GROUP
-    PUSHBUTTON      "&Replace in Files",IDD_FINDINFILES_REPLACEINFILES,304,28,55,14
-    PUSHBUTTON      "Close",IDCANCEL,321,101,38,14
-    GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,163,95,101,25
-    CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,165,96,57,8
-    CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,166,108,60,9
-    CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,230,108,33,9
-    CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,224,98,37,7
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,276,106,64,12
+    CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,35,57,14
+    CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,47,83,15
+    PUSHBUTTON      "Mark All",IDCMARKALL,311,11,47,14
+    CONTROL         "In select&ion",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,251,40,48,10
+    PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,304,28,54,14
+    CONTROL         "&Backward direction",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,60,71,15
+    CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,75,70,11
+    CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,75,48,11
+    CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,155,74,53,12
+    GROUPBOX        "Search Mode",IDC_MODE_STATIC,3,90,154,30
+    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,27,99,35,8
+    CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,68,98,85,9
+    CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,7,108,74,10
+    CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,85,109,69,9
+    PUSHBUTTON      "",IDC_FINDPREV,302,12,12,12,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "",IDC_FINDNEXT,316,12,41,12,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "Find Next",IDOK,303,11,56,14,WS_GROUP
+    CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,3,8,8
+    PUSHBUTTON      "Count&/sum all found",IDCCOUNTALL,112,41,70,18
+    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,304,75,54,26,BS_MULTILINE
+    PUSHBUTTON      "&Find All",IDC_FINDALL_CURRENTFILE,304,59,54,15,BS_MULTILINE
+    PUSHBUTTON      "Re&place",IDREPLACE,303,28,55,14
+    PUSHBUTTON      "Replace &All",IDREPLACEALL,303,45,55,14
+    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,60,55,26,BS_MULTILINE
+    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,303,12,55,14,WS_GROUP
+    PUSHBUTTON      "&Replace in Files",IDD_FINDINFILES_REPLACEINFILES,303,28,55,14
+    PUSHBUTTON      "Close",IDCANCEL,320,101,38,14
+    GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,162,96,101,24
+    CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,164,96,57,8
+    CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,165,108,59,9
+    CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,228,108,32,9
+    CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,223,98,37,6
 END
 
 IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
