on dialogbox Find is merged to Replace

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -37,53 +37,53 @@ EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Replace"
 FONT 9, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    RTEXT           "Find",IDFINDWHAT_STATIC,1,14,13,8
+    RTEXT           "&Find",IDFINDWHAT_STATIC,1,14,13,8
     COMBOBOX        IDFINDWHAT,15,13,286,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,29,25,8
     COMBOBOX        IDREPLACEWITH,28,27,273,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "Filter&s",IDD_FINDINFILES_FILTERS_STATIC,55,43,20,8,SS_NOTIFY
     COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,76,42,225,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "Director&y :",IDD_FINDINFILES_DIR_STATIC,1,52,36,9
-    COMBOBOX        IDD_FINDINFILES_DIR_COMBO,2,61,343,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,346,61,12,12
+    COMBOBOX        IDD_FINDINFILES_DIR_COMBO,2,61,345,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,348,60,10,13
     CONTROL         "Follow c&urrent doc.",IDD_FINDINFILES_FOLDERFOLLOWSDOC_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,276,82,70,12
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,165,77,70,12
     CONTROL         "In all sub&-folders",IDD_FINDINFILES_RECURSIVE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,276,92,60,15
-    CONTROL         "In &hidden folders",IDD_FINDINFILES_INHIDDENDIR_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,276,106,64,12
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,165,88,60,15
+    CONTROL         "In hidden folders",IDD_FINDINFILES_INHIDDENDIR_CHECK,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,242,90,64,11
     CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,35,57,14
     CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,47,83,15
     PUSHBUTTON      "Mark All",IDCMARKALL,311,11,47,14
-    CONTROL         "In select&ion",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,251,40,48,10
+    CONTROL         "In select&ion",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,186,40,48,10
     PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,304,28,54,14
     CONTROL         "&Backward direction",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,60,71,15
-    CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,75,70,11
-    CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,75,48,11
-    CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,155,74,53,12
-    GROUPBOX        "Search Mode",IDC_MODE_STATIC,3,90,154,30
-    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,27,99,35,8
-    CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,68,98,85,9
-    CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,7,108,74,10
-    CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,85,109,69,9
+    CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,76,70,11
+    CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,76,48,11
+    CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,62,53,11
+    GROUPBOX        "Mode",IDC_MODE_STATIC,2,90,152,30
+    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,27,98,35,8
+    CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,68,97,85,9
+    CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,5,108,74,10
+    CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,82,109,69,9
     PUSHBUTTON      "",IDC_FINDPREV,302,12,12,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "",IDC_FINDNEXT,316,12,41,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "Find Next",IDOK,303,11,56,14,WS_GROUP
     CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,3,8,8
-    PUSHBUTTON      "Count&/sum all found",IDCCOUNTALL,112,41,70,18
-    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,304,75,54,26,BS_MULTILINE
-    PUSHBUTTON      "&Find All",IDC_FINDALL_CURRENTFILE,304,59,54,15,BS_MULTILINE
+    PUSHBUTTON      "Count&/total",IDCCOUNTALL,112,41,67,15
+    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,216,61,52,26,BS_MULTILINE
+    PUSHBUTTON      "Fin&d All",IDC_FINDALL_CURRENTFILE,152,61,54,15,BS_MULTILINE
     PUSHBUTTON      "Re&place",IDREPLACE,303,28,55,14
     PUSHBUTTON      "Replace &All",IDREPLACEALL,303,45,55,14
     PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,60,55,26,BS_MULTILINE
     PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,303,12,55,14,WS_GROUP
     PUSHBUTTON      "&Replace in Files",IDD_FINDINFILES_REPLACEINFILES,303,28,55,14
-    PUSHBUTTON      "Close",IDCANCEL,320,101,38,14
-    GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,162,96,101,24
-    CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,164,96,57,8
-    CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,165,108,59,9
-    CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,228,108,32,9
-    CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,223,98,37,6
+    PUSHBUTTON      "Close",IDCANCEL,320,94,38,12
+    GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,157,102,199,18
+    CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,156,109,57,8
+    CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,257,109,59,9
+    CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,320,109,32,9
+    CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,215,111,38,7
 END
 
 IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
