--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -385,15 +385,15 @@ BEGIN
 
     POPUP "&Search"
     BEGIN
-        MENUITEM "&Find...",                    IDM_SEARCH_FIND
-        MENUITEM "Find in Files...",            IDM_SEARCH_FINDINFILES
+        // MENUITEM "&Find...",                    IDM_SEARCH_FIND
+        MENUITEM "&Find/Replace...",                 IDM_SEARCH_REPLACE
+        MENUITEM "Find/Replace in Files...",            IDM_SEARCH_FINDINFILES
         MENUITEM "Find &Next",                  IDM_SEARCH_FINDNEXT
         MENUITEM "Find &Previous",              IDM_SEARCH_FINDPREV
         MENUITEM "Select and Find Next",        IDM_SEARCH_SETANDFINDNEXT
         MENUITEM "Select and Find Previous",    IDM_SEARCH_SETANDFINDPREV
         MENUITEM "Find (Volatile) Next",        IDM_SEARCH_VOLATILE_FINDNEXT
         MENUITEM "Find (Volatile) Previous",    IDM_SEARCH_VOLATILE_FINDPREV
-        MENUITEM "&Replace...",                 IDM_SEARCH_REPLACE
         MENUITEM "&Incremental Search",         IDM_SEARCH_FINDINCREMENT
         MENUITEM "Search Results Window",       IDM_FOCUS_ON_FOUND_RESULTS
         MENUITEM "Next Search Result",          IDM_SEARCH_GOTONEXTFOUND
