capable multi-dir. search-in-files

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -46,12 +46,12 @@ BEGIN
     RTEXT           "Director&y :",IDD_FINDINFILES_DIR_STATIC,1,52,36,9
     COMBOBOX        IDD_FINDINFILES_DIR_COMBO,2,61,345,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,348,60,10,13
-    CONTROL         "Follow c&urrent doc.",IDD_FINDINFILES_FOLDERFOLLOWSDOC_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,165,77,70,12
+    CONTROL         "In working dir.",IDD_FINDINFILES_FOLDERFOLLOWSDOC_CHECK,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,163,77,59,12
     CONTROL         "In all sub&-folders",IDD_FINDINFILES_RECURSIVE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,165,88,60,15
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,163,90,60,14
     CONTROL         "In hidden folders",IDD_FINDINFILES_INHIDDENDIR_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,242,90,64,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,239,92,64,10
     CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,33,57,13
     CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,47,83,11
     CONTROL         "In select&ion",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,179,40,48,10
@@ -63,8 +63,8 @@ BEGIN
     GROUPBOX        "Mode",IDC_MODE_STATIC,2,90,151,30
     CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,25,98,35,8
     CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,66,98,83,8
-    CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,5,108,74,10
-    CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,82,109,69,9
+    CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,5,109,74,9
+    CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,81,109,68,9
     PUSHBUTTON      "",IDC_FINDPREV,302,12,13,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "Find Next",IDOK,303,12,54,13,WS_GROUP
     CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,3,8,8
@@ -76,7 +76,7 @@ BEGIN
     PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,60,55,26,BS_MULTILINE
     PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,303,12,55,14,WS_GROUP
     PUSHBUTTON      "&Replace in Files",IDD_FINDINFILES_REPLACEINFILES,303,27,55,15
-    PUSHBUTTON      "Close",IDCANCEL,320,94,38,12
+    PUSHBUTTON      "Close",IDCANCEL,322,93,36,13
     GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,158,103,199,17
     CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,155,109,55,8
     CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,255,109,59,9
