--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -386,8 +386,8 @@ BEGIN
     POPUP "&Search"
     BEGIN
         // MENUITEM "&Find...",                    IDM_SEARCH_FIND
-        MENUITEM "&Find/Replace...",                 IDM_SEARCH_REPLACE
-        MENUITEM "Find/Replace in Files...",            IDM_SEARCH_FINDINFILES
+        MENUITEM "&Find/Replace",                 IDM_SEARCH_REPLACE
+        MENUITEM "Find/Replace in Files",            IDM_SEARCH_FINDINFILES
         MENUITEM "Find &Next",                  IDM_SEARCH_FINDNEXT
         MENUITEM "Find &Previous",              IDM_SEARCH_FINDPREV
         MENUITEM "Select and Find Next",        IDM_SEARCH_SETANDFINDNEXT
