--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -31,57 +31,58 @@
 #include <windows.h>
 #include "FindReplaceDlg_rc.h"
 
-IDD_FIND_REPLACE_DLG DIALOGEX 99, 13, 359, 134
+IDD_FIND_REPLACE_DLG DIALOGEX 111, 9, 359, 134
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Replace"
 FONT 9, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    RTEXT           "&Find",IDFINDWHAT_STATIC,1,14,13,8
-    COMBOBOX        IDFINDWHAT,15,13,286,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,29,25,8
-    COMBOBOX        IDREPLACEWITH,27,26,274,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "Filter&s",IDD_FINDINFILES_FILTERS_STATIC,61,43,20,8,SS_NOTIFY
-    COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,83,41,218,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    LTEXT           "Director&y:",IDD_FINDINFILES_DIR_STATIC,1,48,33,8
-    COMBOBOX        IDD_FINDINFILES_DIR_COMBO,2,57,345,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,348,56,10,13
-    CONTROL         "In working dir.",IDD_FINDINFILES_FOLDERFOLLOWSDOC_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,169,77,57,12
-    CONTROL         "In all sub&-folders",IDD_FINDINFILES_RECURSIVE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,169,90,60,14
-    CONTROL         "In hidden",IDD_FINDINFILES_INHIDDENDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,92,43,10
-    CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,33,57,13
-    CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,47,83,11
-    CONTROL         "In select&ion",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,176,41,48,9
-    PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,303,26,54,14
-    CONTROL         "&Backward direction",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,60,71,13
-    CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,76,70,11
-    CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,76,48,11
-    CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,61,53,11
-    GROUPBOX        "Mode",IDC_MODE_STATIC,2,91,151,29
-    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,25,98,35,8
-    CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,65,98,83,8
-    CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,5,109,74,9
-    CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,81,109,68,9
-    PUSHBUTTON      "",IDC_FINDPREV,302,12,13,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "Find Next",IDOK,303,13,54,11,WS_GROUP
-    CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,3,8,8
-    PUSHBUTTON      "Count&/total",IDCCOUNTALL,105,40,42,13
-    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,249,60,52,26,BS_MULTILINE
-    PUSHBUTTON      "Fin&d All",IDC_FINDALL_CURRENTFILE,249,43,52,15,BS_MULTILINE
-    PUSHBUTTON      "Re&place",IDREPLACE,303,25,54,13
-    PUSHBUTTON      "Replace &All",IDREPLACEALL,303,43,55,15
-    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,60,55,26,BS_MULTILINE
-    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,302,12,55,12,WS_GROUP
-    PUSHBUTTON      "&Replace in Files",IDD_FINDINFILES_REPLACEINFILES,303,26,55,14
-    PUSHBUTTON      "Close",IDCANCEL,322,93,36,13
-    GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,158,103,199,17
-    CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,156,109,55,8
-    CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,254,109,59,9
-    CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,320,109,32,9
-    CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,213,110,37,7
-    PUSHBUTTON      "",IDC_FINDNEXT,316,12,41,12,BS_MULTILINE | WS_GROUP
+	RTEXT           "&Find",IDFINDWHAT_STATIC,1,14,13,8
+	COMBOBOX        IDFINDWHAT,15,13,286,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+	RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,28,25,8
+	COMBOBOX        IDREPLACEWITH,27,26,274,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+	RTEXT           "Filter&s",IDD_FINDINFILES_FILTERS_STATIC,63,41,19,8,SS_NOTIFY
+	COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,83,39,218,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+	LTEXT           "Director&y:",IDD_FINDINFILES_DIR_STATIC,1,48,33,8
+	COMBOBOX        IDD_FINDINFILES_DIR_COMBO,2,57,345,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+	PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,348,56,10,13
+	CONTROL         "In working dir.",IDD_FINDINFILES_FOLDERFOLLOWSDOC_CHECK,
+						"Button",BS_AUTOCHECKBOX | WS_TABSTOP,169,77,57,12
+	CONTROL         "In all sub&-folders",IDD_FINDINFILES_RECURSIVE_CHECK,
+						"Button",BS_AUTOCHECKBOX | WS_TABSTOP,169,90,60,14
+	CONTROL         "In hidden",IDD_FINDINFILES_INHIDDENDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,92,43,10
+	CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,33,57,13
+	CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,47,83,11
+	PUSHBUTTON      "Mark All",IDCMARKALL,303,13,54,12
+	CONTROL         "In select&ion",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,173,42,47,9
+	PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,303,26,54,14
+	CONTROL         "&Backward direction",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,60,71,13
+	CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,76,70,11
+	CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,76,48,11
+	CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,61,53,11
+	GROUPBOX        "Mode",IDC_MODE_STATIC,2,91,151,29
+	CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,25,98,35,8
+	CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,65,98,83,8
+	CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,5,109,74,9
+	CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,81,109,68,9
+	PUSHBUTTON      "",IDC_FINDPREV,302,12,13,12,BS_MULTILINE | WS_GROUP
+	PUSHBUTTON      "Find Next",IDOK,303,12,54,11,WS_GROUP
+	CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,3,8,8
+	PUSHBUTTON      "Count&/total",IDCCOUNTALL,105,40,42,13
+	PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,249,60,52,26,BS_MULTILINE
+	PUSHBUTTON      "Fin&d All",IDC_FINDALL_CURRENTFILE,249,43,52,15,BS_MULTILINE
+	PUSHBUTTON      "Re&place",IDREPLACE,303,24,54,13
+	PUSHBUTTON      "Replace &All",IDREPLACEALL,303,43,55,15
+	PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,60,55,26,BS_MULTILINE
+	PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,303,12,55,12,WS_GROUP
+	PUSHBUTTON      "&Replace in Files",IDD_FINDINFILES_REPLACEINFILES,303,26,55,14
+	PUSHBUTTON      "Close",IDCANCEL,322,93,36,13
+	GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,158,103,199,17
+	CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,156,109,55,8
+	CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,254,109,59,9
+	CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,320,109,32,9
+	CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,213,110,37,7
+	PUSHBUTTON      "",IDC_FINDNEXT,316,12,41,12,BS_MULTILINE | WS_GROUP
 END
 
 IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
@@ -115,17 +116,17 @@ EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Find in found results"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    RTEXT           "&Find what :",IDFINDWHAT_STATIC_FIFOLDER,6,22,75,8
-    COMBOBOX        IDFINDWHAT_FIFOLDER,83,20,178,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+	RTEXT           "&Find what :",IDFINDWHAT_STATIC_FIFOLDER,6,22,75,8
+	COMBOBOX        IDFINDWHAT_FIFOLDER,83,20,178,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
 	CONTROL         "Search only in found lines",IDC_MATCHLINENUM_CHECK_FIFOLDER,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,66,99,16
 	CONTROL         "Match &whole word only",IDWHOLEWORD_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,88,140,15
-    CONTROL         "Match &case",IDMATCHCASE_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,100,140,15
+	CONTROL         "Match &case",IDMATCHCASE_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,100,140,15
 
-    GROUPBOX        "Search Mode",IDC_MODE_STATIC_FIFOLDER,6,131,159,48
-    CONTROL         "&Normal",IDNORMAL_FIFOLDER,"Button",BS_AUTORADIOBUTTON | WS_GROUP,12,143,126,10
-    CONTROL         "E&xtended (\\n, \\r, \\t, \\0, \\x...)",IDEXTENDED_FIFOLDER, "Button",BS_AUTORADIOBUTTON,12,155,145,10
-    CONTROL         "Re&gular expression",IDREGEXP_FIFOLDER,"Button",BS_AUTORADIOBUTTON,12,167,78,10
+	GROUPBOX        "Search Mode",IDC_MODE_STATIC_FIFOLDER,6,131,159,48
+	CONTROL         "&Normal",IDNORMAL_FIFOLDER,"Button",BS_AUTORADIOBUTTON | WS_GROUP,12,143,126,10
+	CONTROL         "E&xtended (\\n, \\r, \\t, \\0, \\x...)",IDEXTENDED_FIFOLDER, "Button",BS_AUTORADIOBUTTON,12,155,145,10
+	CONTROL         "Re&gular expression",IDREGEXP_FIFOLDER,"Button",BS_AUTORADIOBUTTON,12,167,78,10
 	CONTROL         "&. matches newline",IDREDOTMATCHNL_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,93,167,68,9
-    PUSHBUTTON      "Find All",IDOK,268,20,90,14,WS_GROUP
+	PUSHBUTTON      "Find All",IDOK,268,20,90,14,WS_GROUP
 	PUSHBUTTON      "Close",IDCANCEL,268,38,90,14
 END
